# jukeboxd

client/: astro.config.mjs  package-lock.json  package.json  tsconfig.json
client/src/SpotifyApi/: index.ts  store.ts
client/src/components/: ToggleTheme.tsx
client/src/components/data/: UserStore.ts
client/src/components/widgets/: LoginRedirect.tsx  UserHeader.astro  UserHeader.tsx  header.astro  logo.astro  spotifylogin.astro
client/src/layouts/: Layout.astro
client/src/pages/: callback.astro  home.astro  index.astro
client/src/styles/: text.css
server/: Cargo.toml
server/src/: main.rs
server/src/models/: errors.rs  mod.rs  spotify_models.rs
server/src/repositories/auth_repository/: routes.rs
