[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.7.0"
serde = {version = "1.0.139", features = ["derive"]}
serde_json = "1.0.82"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono", "uuidv07"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
env_logger = "0.9.0"
actix-cors = "0.6.2"
reqwest = "0.11.11"